[package]
name = "csv"
version = "1.0.0-beta.5"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Fast CSV parsing with support for serde."
documentation = "http://burntsushi.net/rustdoc/csv/"
homepage = "https://github.com/BurntSushi/rust-csv"
repository = "https://github.com/BurntSushi/rust-csv"
readme = "README.md"
keywords = ["csv", "comma", "parser", "delimited", "serde"]
license = "Unlicense/MIT"
categories = ["encoding", "parser-implementations"]
exclude = ["/.travis.yml", "/scripts/*", "/session.vim","/sgx/","/ci/*"]
[badges]
travis-ci = { repository = "BurntSushi/rust-csv" }
appveyor = { repository = "BurntSushi/rust-csv" }

[lib]
bench = false

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.2" }

[dependencies]
csv-core = { path = "./csv-core", version = "0.1.3" }
serde = { version = "1.0", git = "https://github.com/mesalock-linux/serde-sgx"}

[dev-dependencies]
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_bytes = "0.10"

[profile.release]
debug = true

[profile.bench]
debug = true
