[package]
name = "csv-index"
version = "0.1.4"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "On disk CSV indexing data structures."
documentation = "https://docs.rs/csv-index"
homepage = "https://github.com/BurntSushi/rust-csv"
repository = "https://github.com/BurntSushi/rust-csv"
readme = "README.md"
keywords = ["csv", "comma", "parser", "delimited", "index"]
license = "Unlicense/MIT"
categories = ["encoding", "parser-implementations"]

[badges]
travis-ci = { repository = "BurntSushi/rust-csv" }
appveyor = { repository = "BurntSushi/rust-csv" }

[lib]
bench = false

[target.'cfg(not(target_env = "sgx"))'.dependencies]
#sgx_tstd = { path =  "../../../sgx_tstd" }
sgx_tstd = { rev ="v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }
[dependencies]
byteorder = { path="../../byteorder"}
csv = { path = "..", version = "1.0.0-beta.5" }

[profile.release]
debug = true

[profile.bench]
debug = true

[features]
default = ["std","mesalock_sgx"]
std=[]
mesalock_sgx = ["sgx_tstd"]